re PR target/37520 (NO_DOLLAR_IN_LABEL should be defined on x86 targets)

2009-03-06  H.J. Lu  <hongjiu.lu@intel.com>

	PR c++/37520
	* cp-tree.h: Check NO_DOT_IN_LABEL before NO_DOLLAR_IN_LABEL
	when mangling symbols.

From-SVN: r144692